Fixed wrong font way

--- a/css/style.css
+++ b/css/style.css
@@ -946,7 +946,7 @@ header .heading .heading__description {
 @font-face {
   font-family: "Proxima Nova Black";
   src: url("../fonts/ Simonson - Proxima Nova Black.eot'");
-  src: local("☺"), url("../../fonts/Mark Simonson - Proxima Nova Black.woff") format("woff"), url("../fonts/Mark Simonson - Proxima Nova Black.ttf") format("truetype"), url("../fonts/Mark Simonson - Proxima Nova Black.svg") format("svg");
+  src: local("☺"), url("../fonts/Mark Simonson - Proxima Nova Black.woff") format("woff"), url("../fonts/Mark Simonson - Proxima Nova Black.ttf") format("truetype"), url("../fonts/Mark Simonson - Proxima Nova Black.svg") format("svg");
   font-weight: normal;
   font-style: normal;
 }
